finish single player with name

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
     <canvas id="screen"> </canvas>
-    <script src="assets/bundle.js"></script>
+    <script src="assets/js/bundle.js"></script>
     <script src="http://localhost:8080/webpack-dev-server.js"></script>
 </body>
 </html>
