--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,6 +20,11 @@
     </style>
 </head>
 <body>
+    <div>
+        <p>来输入一个名字把？</p>
+        <input type="text" id="name" />
+        <button id="link" >Try</button>
+    </div>
     <canvas id="screen"> </canvas>
     <script src="assets/js/bundle.js"></script>
     <script src="http://localhost:8080/webpack-dev-server.js"></script>
