--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,6 +10,7 @@
             height  : 100%;
             margin  : 0;
             padding : 0;
+            background-color: #eee;
         }
 
         #screen {
@@ -17,15 +18,62 @@
             height  : 100%;
             touch-action: none;
         }
+        #login-container {
+            padding-top: 40px;
+            padding-bottom: 40px;
+        }
+
+        .form-signin {
+            max-width: 400px;
+            padding: 15px;
+            margin: 0 auto;
+        }
+        .form-signin .form-signin-heading,
+        .form-signin .form-control {
+            position: relative;
+            height: auto;
+            -webkit-box-sizing: border-box;
+            -moz-box-sizing: border-box;
+            box-sizing: border-box;
+            padding: 10px;
+            font-size: 20px;
+        }
+        .form-signin .form-control:focus {
+            z-index: 2;
+        }
+        .form-signin input[type="text"] {
+            margin-bottom: -1px;
+            border-bottom-right-radius: 0;
+            border-bottom-left-radius: 0;
+        }
+
     </style>
 </head>
 <body>
-    <div>
-        <p>来输入一个名字把？</p>
-        <input type="text" id="name" />
-        <button id="link" >Try</button>
+
+    <div id="login-container" class="container">
+        <form class="form-signin" role="form" id="login-form">
+            <h1 class="form-signin-heading">Choose a fabulous name</h1>
+            <input type="text" id="name-input" class="form-control" placeholder="Your name" required autofocus>
+            <br>
+            <button class="btn btn-lg btn-primary btn-block" type="submit">Enter the Game</button>
+        </form>
+        <div id="rep-name" class="alert alert-danger" role="alert" style="display:none">Oh...The name you selected has been used, please choose a new one.</div>
+    </div> <!-- /container -->
+
+    <div class="container" id="screen-container" style="display: none">
+        <div class="row">
+            <div class="col-xs-12 col-md-8">
+
+            </div>
+            <div class="col-xs-6 col-md-4"><canvas id="screen"> </canvas></div>
+        </div>
     </div>
-    <canvas id="screen"> </canvas>
+    <link rel="stylesheet" href="assets/css/bootstrap.min.old.css">
+    <!--link rel="stylesheet" href="assets/css/bootstrap.min.old.css"-->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
+
     <script src="assets/js/bundle.js"></script>
     <script src="http://localhost:8080/webpack-dev-server.js"></script>
 </body>
