add loading tips

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -69,7 +69,13 @@
 </head>
 <body>
 
-<div id="login-container" class="container">
+<div id="waiting-container">
+    Loading Kernel Script......Please wait........
+    <br/>
+    the Kernel Script is a little large, so it needs more time than normal application.
+</div>
+
+<div id="login-container" class="container" style="display: none">
     <form class="form-signin" role="form" id="login-form">
         <h1 class="form-signin-heading">Choose a fabulous name</h1>
         <input type="text" id="name-input" class="form-control" placeholder="Your name" required autofocus>
