--- a/frontend/index.html
+++ b/frontend/index.html
@@ -123,6 +123,6 @@
 <script src="assets/js/bootstrap.min.js"></script>
 
 <script src="assets/js/bundle.js"></script>
-<script src="http://localhost:8080/webpack-dev-server.js"></script>
+<!--script src="http://localhost:8080/webpack-dev-server.js"></script-->
 </body>
 </html>
